k8s/ext-auth-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-auth-node
  labels:
    app: ext-auth-node
    service: ext-auth-node
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  selector:
    app: ext-auth-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-auth-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ext-auth-node
      version: v1
  template:
    metadata:
      labels:
        app: ext-auth-node
        version: v1
    spec:
      serviceAccountName: ext-auth-node
      containers:
      - image: docker.io/narioinc89/ext-auth-node
        imagePullPolicy: Always
        name: ext-auth-node
        ports:
        - containerPort: 80
