k8s/httpbin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - name: "httpbin"
    match:
    - uri:
        prefix: "/httpbin"
    rewrite:
      uri: "/"    
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
