k8s/kc-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - name: "keycloak"
    match:
    - uri:
        prefix: "/keycloak"
    route:
    - destination:
        host: keycloak
        port:
          number: 8080
